# django-template

./: README.md  docker-compose.yml  task.txt
server/: Gemfile  README.md  db.sqlite3  docker-compose.yml  main.py  pyproject.toml  settings.py
server/app/controllers/: application_controller.rb
server/app/controllers/api/auth/: authentication_controller.rb
server/app/helpers/: time_helper.rb
server/app/lib/: dev_seeder.rb
server/app/models/: team.rb  user.rb
server/app/models/concerns/: caching_functionality.rb  locking_functionality.rb
server/app/models/concerns/mongo_searcher/base/: core.rb  default_sort.rb
server/app/models/concerns/mongo_searcher/filters/: archived_filter.rb  date_range_filter.rb  date_time_range_filter.rb  ids_filter.rb  labels_filter.rb  priority_filter.rb  starred_filter.rb  user_filter.rb
server/app/models/concerns/mongo_searcher/queries/: cross_field_keywords_query.rb  name_query.rb
server/app/workers/: abstract_worker.rb
server/config/: application.rb  credentials.yml.enc  master.key  mongoid.yml  routes.rb
server/config/environments/: production.rb
server/config/initializers/: cloud.rb  commit.rb
server/controllers/: users.py
server/models/: setup.py  team.py  user.py
server/projects/: admin.py  models.py  serializers.py  urls.py  views.py
server/server/: celery.py  settings.py  urls.py
server/tmp/: local_secret.txt
server/tmp/cache/bootsnap/: load-path-cache
server/tmp/cache/bootsnap/compile-cache-iseq/00/: 074488d110fd51  (+23 more)
server/users/: admin.py  models.py  serializers.py  urls.py  views.py
(+6901 files in other folders)
